<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:visible="false" />

    <item
        android:id="@+id/navigation_routes"
        android:icon="@drawable/ic_routes"
        android:title="@string/title_routes" />

    <item
        android:id="@+id/navigation_rope_up"
        android:icon="@drawable/ic_rope_up"
        android:title="@string/title_rope_up"
        android:visible="false" />

    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/ic_diary"
        android:title="@string/title_diary"
        android:visible="false" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"
        android:visible="false" />
</menu>