<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="hofy.ropeup.presentation.ui.creation.route.RouteCreationViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="?android:attr/windowBackground"
                app:layout_constraintBottom_toTopOf="@+id/btnCreate"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="@android:color/transparent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textShortMessage" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:suffixText="m"
                        app:suffixTextColor="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtLength"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/length"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="@android:color/transparent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtGrade"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/grade" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> vm.createRoute(edtName.getText().toString(),edtGrade.getText().toString(),edtLength.getText().toString())}"
                android:text="@string/create"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            visible="@{vm.viewStateLiveData.loading}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/windowBackground">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <FrameLayout
            visible="@{vm.viewStateLiveData.error}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/windowBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loading_error" />
        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
