<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="onCreateClickListener"
            type="kotlin.jvm.functions.Function0" />

        <variable
            name="vm"
            type="hofy.ropeup.presentation.ui.main.routes.RoutesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRoutes"
            routes="@{vm.viewStateLiveData.dataOrNull}"
            visible="@{vm.viewStateLiveData.data}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btnCreate"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> onCreateClickListener.invoke()}"
            android:text="@string/create"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent" />

        <FrameLayout
            visible="@{vm.viewStateLiveData.loading}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/windowBackground">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <FrameLayout
            visible="@{vm.viewStateLiveData.error}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/windowBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loading_error" />
        </FrameLayout>

        <FrameLayout
            visible="@{vm.viewStateLiveData.empty}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/windowBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_data_info" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
